support hide dependency and codeOnly dependency (#20)
* add custom doc

Signed-off-by: theonefx <chenxilzx1@gmail.com>

* add custom doc

Signed-off-by: theonefx <chenxilzx1@gmail.com>

* add custom doc

Signed-off-by: theonefx <chenxilzx1@gmail.com>

* add custom doc

Signed-off-by: theonefx <chenxilzx1@gmail.com>

* refactor docs

Signed-off-by: theonefx <chenxilzx1@gmail.com>

* allow hidden dependency

Signed-off-by: theonefx <chenxilzx1@gmail.com>

* support sample code write to project root

Signed-off-by: theonefx <chenxilzx1@gmail.com>

* spell fix

Signed-off-by: theonefx <chenxilzx1@gmail.com>

* spell fix

Signed-off-by: theonefx <chenxilzx1@gmail.com>

* allow hidden dependency

Signed-off-by: theonefx <chenxilzx1@gmail.com>

* support sample code write to project root

Signed-off-by: theonefx <chenxilzx1@gmail.com>

* add codeOnly depencencies proeprty of dependency

Signed-off-by: theonefx <chenxilzx1@gmail.com>

* support codeonly dependency

Signed-off-by: theonefx <chenxilzx1@gmail.com>

* hide group

Signed-off-by: theonefx <chenxilzx1@gmail.com>

* support dependency of dependency

Signed-off-by: theonefx <chenxilzx1@gmail.com>

* bugfix && page label update

Signed-off-by: theonefx <chenxilzx1@gmail.com>

* misspelling

Signed-off-by: theonefx <chenxilzx1@gmail.com>

Signed-off-by: theonefx <chenxilzx1@gmail.com>

--- a/initializer-generator/src/main/resources/metadata.yaml
+++ b/initializer-generator/src/main/resources/metadata.yaml
@@ -1707,6 +1707,14 @@ initializr:
               href: https://googlecloudplatform.github.io/spring-cloud-gcp/reference/html/index.html#cloud-storage
             - rel: guide
               href: https://github.com/GoogleCloudPlatform/spring-cloud-gcp/tree/main/spring-cloud-gcp-samples/spring-cloud-gcp-storage-resource-sample
+    - name: Hidden Group
+      id: hidden-group
+      hide: true
+      description: this is a hidden dependency group
+      content:
+        - name: cloudshell
+          id: cloudshell
+          codeOnly: true
   types:
     - name: Maven Project
       id: maven-project
