--- a/initializer-generator/src/main/resources/metadata.yaml
+++ b/initializer-generator/src/main/resources/metadata.yaml
@@ -164,7 +164,7 @@ initializr:
           - compatibilityRange: "[2.4.0,2.6.0)"
             version: 2021.1
           - compatibilityRange: "[2.2.0.RELEASE,2.4.0)"
-            version: 2.2.9.RELEASE
+            version: 2.2.10-RC1
           - compatibilityRange: "[2.1.0.M1,2.2.0.RELEASE)"
             version: 2.1.4.RELEASE
           - compatibilityRange: "[2.0.0.M1,2.1.0.M1)"
@@ -332,6 +332,34 @@ initializr:
             - rel: guide
               href: https://github.com/alibaba/spring-cloud-alibaba/tree/master/spring-cloud-alibaba-examples/nacos-example/nacos-config-example
               description: Nacos Configuration Example
+        - name: Spring Cloud Alibaba Governance Auth
+          compatibilityRange: "[2.2.0.RELEASE,2.4.0)"
+          id: sca-governance-auth
+          description: 提供Spring Cloud Alibaba自研的服务鉴权能力
+          groupId: com.alibaba.cloud
+          artifactId: spring-cloud-starter-alibaba-governance-auth
+          starter: false
+        - name: Spring Cloud Alibaba Governance Routing
+          compatibilityRange: "[2.2.0.RELEASE,2.4.0)"
+          id: sca-governance-routing
+          description: 提供Spring Cloud Alibaba自研的服务流量灰度能力
+          groupId: com.alibaba.cloud
+          artifactId: spring-cloud-starter-alibaba-governance-routing
+          starter: false
+        - name: Spring Cloud Alibaba xDS Adapter
+          compatibilityRange: "[2.2.0.RELEASE,2.4.0)"
+          id: sca-xds-adapter
+          description: 提供xDS协议适配能力，可用于接收从Istio等控制平面下发的CRD规则
+          groupId: com.alibaba.cloud
+          artifactId: spring-cloud-starter-xds-adapter
+          starter: false
+        - name: Spring Cloud Alibaba OpenSergo Adapter
+          compatibilityRange: "[2.2.0.RELEASE,2.4.0)"
+          id: sca-opensergo-adapter
+          description: 提供OpenSergo所支持的协议适配能力，可用于接收从OpenSergo控制平面下发的CRD规则
+          groupId: com.alibaba.cloud
+          artifactId: spring-cloud-starter-opensergo-adapter
+          starter: false
     - name: Developer Tools
       content:
         - name: Arthas
