add sub module dependency
Signed-off-by: theonefx <chenxilzx1@gmail.com>

--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,18 @@
             </dependency>
 
             <dependency>
+                <groupId>com.alibaba</groupId>
+                <artifactId>initializer-generator</artifactId>
+                <version>0.8</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.alibaba</groupId>
+                <artifactId>initializer-page</artifactId>
+                <version>0.8</version>
+            </dependency>
+
+            <dependency>
                 <groupId>org.slf4j</groupId>
                 <artifactId>jcl-over-slf4j</artifactId>
                 <version>1.7.26</version>
