--- a/initializer-generator/pom.xml
+++ b/initializer-generator/pom.xml
@@ -129,6 +129,8 @@
                 <version>2.3.7.RELEASE</version>
                 <configuration>
                     <mainClass>com.alibaba.initializer.start.Application</mainClass>
+                    <attach>true</attach>
+                    <classifier>fatjar</classifier>
                 </configuration>
                 <executions>
                     <execution>
