--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,6 @@
         <security.version>2.1.4-SNAPSHOT</security.version>
         <mockito-all.version>1.10.19</mockito-all.version>
 
-        <maven-antrun.version>1.8</maven-antrun.version>
         <java.version>17</java.version>
         <maven.compiler.target>17</maven.compiler.target>
         <maven.compiler.source>17</maven.compiler.source>
@@ -72,11 +71,6 @@
                 <groupId>com.google.guava</groupId>
                 <artifactId>guava</artifactId>
                 <version>20.0</version>
-            </dependency>
-            <dependency>
-                <groupId>com.alibaba.security</groupId>
-                <artifactId>security-all</artifactId>
-                <version>2.0.7-SNAPSHOT</version>
             </dependency>
 
             <!-- support git protocol -->
@@ -187,15 +181,12 @@
         <pluginManagement>
             <plugins>
                 <plugin>
-                    <artifactId>maven-antrun-plugin</artifactId>
-                    <version>${maven-antrun.version}</version>
-                </plugin>
-                <plugin>
                     <groupId>com.github.eirslett</groupId>
                     <artifactId>frontend-maven-plugin</artifactId>
                     <version>1.11.0</version>
                 </plugin>
                 <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-resources-plugin</artifactId>
                     <version>3.1.0</version>
                 </plugin>
