extract start module
Signed-off-by: theonefx <chenxilzx1@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@ initializer-page/node/
 initializer-page/node_modules/
 initializer-page/analysis/
 initializer-page/target/
-
+initializer-start/target/
 initializer-generator/target/
 
 node_modules/
