optmize classpath content loader
Signed-off-by: theonefx <chenxilzx1@gmail.com>

--- a/initializer-page/pom.xml
+++ b/initializer-page/pom.xml
@@ -54,7 +54,7 @@
                 <executions>
                     <execution>
                         <id>copy-base-web-resource</id>
-                        <phase>prepare-package</phase>
+                        <phase>process-sources</phase>
                         <goals>
                             <goal>copy-resources</goal>
                         </goals>
