--- a/initializer-generator/src/main/resources/metadata.yaml
+++ b/initializer-generator/src/main/resources/metadata.yaml
@@ -159,7 +159,9 @@ initializr:
         mappings:
           - compatibilityRange: "[3.0.0, 3.0.1)"
             version: 2022.0.0.0-RC1
-          - compatibilityRange: "[2.6.11, 3.0.0)"
+          - compatibilityRange: "[2.6.13, 3.0.0)"
+            version: 2021.0.5.0
+          - compatibilityRange: "[2.6.11, 2.6.13)"
             version: 2021.0.4.0
           - compatibilityRange: "[2.6.0,2.6.11)"
             version: 2021.0.1.0
@@ -1819,8 +1821,8 @@ initializr:
       id: 3.0.0
     - name: 2.7.6
       id: 2.7.6
-    - name: 2.6.11
-      id: 2.6.11
+    - name: 2.6.13
+      id: 2.6.13
       default: true
     - name: 2.4.2
       id: 2.4.2
