--- a/initializer-page/pom.xml
+++ b/initializer-page/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>com.alibaba</groupId>
         <artifactId>cloud-native-app-initializer</artifactId>
-        <version>${revision}</version>
+        <version>0.8</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
